# yew-video-streaming

./: .gitignore  Cargo.toml  index.html
src/: main.rs
